--- a/client/vercel.json
+++ b/client/vercel.json
@@ -3,6 +3,10 @@
         {
             "source": "/api/(.*)",
             "destination": "https://pokedex-favorites-one.vercel.app/api/$1"
+        },
+        {
+            "source": "/(.*)",
+            "destination": "/index.html"
         }
     ]
 }
